1/9/2017 -Modify/New feature to LocalFileManager

--- a/NeatDrive/Base.lproj/Main.storyboard
+++ b/NeatDrive/Base.lproj/Main.storyboard
@@ -28,7 +28,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="72"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="iTl-lV-MKL" id="VgG-hB-zdw">
-                                            <frame key="frameInset" width="375" height="71.5"/>
+                                            <frame key="frameInset" width="375" height="71"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yHq-h1-BGz">
@@ -99,15 +99,78 @@
                         <viewControllerLayoutGuide type="bottom" id="v0h-kq-QAp"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="wN2-gm-Skb">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="68" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="coq-Xx-6Nu">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FileCell" rowHeight="71" id="1u5-Mo-QnC" customClass="FileCell" customModule="NeatDrive" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="71"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1u5-Mo-QnC" id="MVw-Ai-8Rd">
+                                            <frame key="frameInset" width="375" height="70"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="46w-NF-aiO">
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="46w-NF-aiO" secondAttribute="height" multiplier="1:1" id="rOg-70-5ec"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hdl-qj-5dz">
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1mo-My-cZ5">
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.60999599358974366" green="0.60999599358974366" blue="0.60999599358974366" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="46w-NF-aiO" firstAttribute="centerY" secondItem="MVw-Ai-8Rd" secondAttribute="centerY" id="3df-Ia-tqD"/>
+                                                <constraint firstItem="hdl-qj-5dz" firstAttribute="leading" secondItem="46w-NF-aiO" secondAttribute="trailing" constant="7.5" id="4wI-8s-CpK"/>
+                                                <constraint firstItem="46w-NF-aiO" firstAttribute="top" secondItem="MVw-Ai-8Rd" secondAttribute="topMargin" id="99s-au-Tsm"/>
+                                                <constraint firstItem="46w-NF-aiO" firstAttribute="leading" secondItem="MVw-Ai-8Rd" secondAttribute="leadingMargin" id="Gvb-pd-akM"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="1mo-My-cZ5" secondAttribute="trailing" id="Hgj-Wx-IhH"/>
+                                                <constraint firstItem="46w-NF-aiO" firstAttribute="bottom" secondItem="MVw-Ai-8Rd" secondAttribute="bottomMargin" id="Vmd-tf-zFb"/>
+                                                <constraint firstItem="1mo-My-cZ5" firstAttribute="bottom" secondItem="MVw-Ai-8Rd" secondAttribute="bottomMargin" id="cff-h6-cY1"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="hdl-qj-5dz" secondAttribute="trailing" id="d4e-o4-P5x"/>
+                                                <constraint firstItem="1mo-My-cZ5" firstAttribute="leading" secondItem="hdl-qj-5dz" secondAttribute="leading" id="jOa-I8-baR"/>
+                                                <constraint firstItem="hdl-qj-5dz" firstAttribute="centerY" secondItem="46w-NF-aiO" secondAttribute="centerY" id="t5y-WH-s40"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="iconImage" destination="46w-NF-aiO" id="gdj-cM-A3A"/>
+                                            <outlet property="subtitleLabel" destination="1mo-My-cZ5" id="s8x-9H-7Xi"/>
+                                            <outlet property="titleLabel" destination="hdl-qj-5dz" id="Z4c-Vq-ha0"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="Sc8-TX-c9x" id="fvb-er-Fny"/>
+                                    <outlet property="delegate" destination="Sc8-TX-c9x" id="n8S-N0-sBx"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="v0h-kq-QAp" firstAttribute="top" secondItem="coq-Xx-6Nu" secondAttribute="bottom" id="5fb-FB-GJr"/>
+                            <constraint firstAttribute="trailing" secondItem="coq-Xx-6Nu" secondAttribute="trailing" id="Iwq-Wq-40W"/>
+                            <constraint firstItem="coq-Xx-6Nu" firstAttribute="top" secondItem="jMg-qE-Tno" secondAttribute="bottom" id="aJW-53-dFI"/>
+                            <constraint firstItem="coq-Xx-6Nu" firstAttribute="leading" secondItem="wN2-gm-Skb" secondAttribute="leading" id="vLo-BJ-T2d"/>
+                        </constraints>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                     <navigationItem key="navigationItem" id="H3R-Id-cSV"/>
+                    <connections>
+                        <outlet property="tableView" destination="coq-Xx-6Nu" id="fiV-0L-eOE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x1i-b1-ZTB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1310" y="-1392"/>
+            <point key="canvasLocation" x="1309.5999999999999" y="-1392.0539730134933"/>
         </scene>
         <!--Cloud Service View Controller-->
         <scene sceneID="hxn-eR-uzg">
@@ -128,7 +191,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="h95-Cf-uKP" id="f4G-2Z-HDP">
-                                            <frame key="frameInset" width="375" height="43.5"/>
+                                            <frame key="frameInset" width="375" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2pf-XJ-58V">
@@ -192,7 +255,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="65"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="imX-3b-0Jv" id="lPY-xt-p5X">
-                                            <frame key="frameInset" width="375" height="64.5"/>
+                                            <frame key="frameInset" width="375" height="64"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WyN-Zd-6HS">
@@ -256,7 +319,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="99"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vB8-aj-RA6" id="GCT-cB-FCw">
-                                            <frame key="frameInset" width="375" height="98.5"/>
+                                            <frame key="frameInset" width="375" height="98"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MS2-Yu-6st">
